# ssm-rust

./: .gitignore  Cargo.toml
corpus/: macbeth.txt
corpus/seuss/: the-lorax.txt
embeddings/: chars-3.npy  chars-4.npy  chars.npy  chars.txt  seuss.txt  vocab.txt
graphs/: out.txt
src/: embedding.rs  embedding2.rs  lib.rs  main.rs  rnn.rs  ssm.rs  train.rs  utils.rs  visualize.rs
weights/: 1  300-001  cat-100-003  dialog-100-001  macbeth-300-0005  seuss-100-002  seuss-3000-001-5-200
