[package]
name = "ssm"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
bhtsne = "0.5.4"
clap = { version = "4.5.53", features = ["derive"] }
colored = "3.0.0"
csv = "1.4.0"
ndarray = "0.17.1"
ndarray-npy = "0.10.0"
ndarray-rand = "0.16.0"
plotters = "0.3.7"
rand = "0.9.2"
rayon = "1.11.0"
regex = "1.12.2"
rkyv = "0.8.13"
serde = {version = "1.0.228", features = ["derive"]}
serde_json = "1.0.149"
